--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-NotSignedin.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-NotSignedin.fxml
@@ -44,7 +44,7 @@
    <top>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-4.0" BorderPane.alignment="CENTER">
          <image>
-            <Image url="@logo.png" />
+            <Image url="@../logo.png" />
          </image>
       </ImageView>
    </top>
