--- a/app/src/main/java/com/fss/everythingapp/simulations/photoelectriceffect/PhotoelectricController.fxml
+++ b/app/src/main/java/com/fss/everythingapp/simulations/photoelectriceffect/PhotoelectricController.fxml
@@ -8,45 +8,119 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="photoelectric.PhotoelectricController">
    <children>
-      <VBox layoutX="401.0" prefHeight="400.0" prefWidth="198.0">
+      <Canvas fx:id="simulationCanvas" height="600.0" width="600.0" />
+      <VBox layoutX="600.0" prefHeight="600.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="600.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="119.0" prefWidth="169.0">
-               <children>
-                  <TitledPane animated="false" text="Target Material">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <TitledPane animated="false" prefHeight="150.0" text="Light Properties">
+               <content>
+                  <AnchorPane maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <VBox layoutX="5.0" layoutY="5.0" prefHeight="100.0" prefWidth="290.0" spacing="10.0">
                            <children>
-                              <VBox layoutX="-3.0" layoutY="-3.0" prefHeight="97.0" prefWidth="203.0">
+                              <HBox prefHeight="25.0" prefWidth="270.0">
                                  <children>
-                                    <HBox prefHeight="24.0" prefWidth="181.0">
-                                       <children>
-                                          <Label prefHeight="31.0" prefWidth="47.0" text="Label" />
-                                          <Slider prefHeight="19.0" prefWidth="127.0" />
-                                       </children>
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                       <padding>
-                                          <Insets left="5.0" />
-                                       </padding>
-                                    </HBox>
-                                    <HBox prefHeight="27.0" prefWidth="180.0" />
-                                    <HBox prefHeight="27.0" prefWidth="180.0" />
-                                    <HBox prefHeight="27.0" prefWidth="180.0" />
+                                    <Label fx:id="wavelengthLabel" prefHeight="25.0" prefWidth="120.0" text="Wavelength: 400nm" />
+                                    <Slider fx:id="wavelengthSlider" max="800.0" min="200.0" prefHeight="19.0" prefWidth="150.0" value="400.0" />
                                  </children>
-                              </VBox>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox prefHeight="25.0" prefWidth="270.0">
+                                 <children>
+                                    <Label fx:id="angleLabel" prefHeight="25.0" prefWidth="120.0" text="Angle: 45°" />
+                                    <Slider fx:id="angleSlider" max="90.0" prefHeight="19.0" prefWidth="150.0" value="45.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox prefHeight="25.0" prefWidth="270.0">
+                                 <children>
+                                    <Label fx:id="energyLabel" prefHeight="25.0" prefWidth="270.0" text="Photon Energy: 3.10 eV" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
                            </children>
-                        </AnchorPane>
-                    </content>
-                  </TitledPane>
-               </children>
-            </HBox>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
+            <TitledPane animated="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" text="Target Material">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox layoutX="5.0" layoutY="5.0" prefHeight="170.0" prefWidth="290.0" spacing="10.0">
+                           <children>
+                              <HBox prefHeight="25.0" prefWidth="270.0">
+                                 <children>
+                                    <Label fx:id="materialLabel" prefHeight="25.0" prefWidth="120.0" text="Material: Copper" />
+                                    <Slider fx:id="materialSlider" max="3.0" prefHeight="19.0" prefWidth="150.0" snapToTicks="true" value="1.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox prefHeight="25.0" prefWidth="270.0">
+                                 <children>
+                                    <Label fx:id="velocityLabel" prefHeight="25.0" prefWidth="120.0" text="Velocity: 1.0" />
+                                    <Slider fx:id="velocitySlider" max="3.0" min="0.1" prefHeight="19.0" prefWidth="150.0" value="1.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox prefHeight="25.0" prefWidth="270.0">
+                                 <children>
+                                    <Label fx:id="thresholdLabel" prefHeight="25.0" prefWidth="270.0" text="Work Function: 4.30 eV" />
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
+            <TitledPane animated="false" maxHeight="-Infinity" prefHeight="350.0" text="Physics Information">
+               <content>
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="201.0" prefWidth="298.0">
+                     <children>
+                        <VBox layoutX="5.0" layoutY="5.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="240.0" prefWidth="290.0" spacing="3.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Label text="Einstein's Equation: KE = hf - φ" />
+                              <Label text="Materials:" />
+                              <Label text="0=Cesium (2.3eV), 1=Copper (4.3eV)" />
+                              <Label text="2=Platinum (5.1eV), 3=Tungsten (6.35eV)" />
+                              <Label text="" />
+                              <Label text="Instructions:" />
+                              <Label text="• Adjust wavelength to change energy" />
+                              <Label text="• Try different materials" />
+                              <Label text="• Blue electrons = higher energy" />
+                           </children>
+                           <padding>
+                              <Insets left="5.0" />
+                           </padding>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
          </children>
       </VBox>
-      <Canvas height="400.0" layoutX="-5.0" width="399.0" />
+      <Label layoutX="166.0" layoutY="14.0" text="Photoelectric Effect">
+         <font>
+            <Font name="System Bold" size="33.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
