--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
@@ -1,6 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentController.java" />
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentController">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Please enter your Name and Grade" translateX="100.0">
+               <font>
+                  <Font name="Rockwell" size="25.0" />
+               </font>
+            </Label>
+            <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <TextField layoutX="121.0" layoutY="66.0" promptText="Name" />
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <ChoiceBox layoutX="14.0" layoutY="66.0" prefWidth="150.0" />
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#enterBtnPressed" text="Enter" textAlignment="CENTER" translateX="278.0" />
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <Label text="Student Services Apointments" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Rockwell" size="35.0" />
+         </font>
+      </Label>
+   </top>
+</BorderPane>
