Implement bus navigation and update UI components
- Added openBuses method in MainMenuController to load bus information UI.
- Updated Example.fxml to link the Buses button to the new method.
- Introduced quit method in MainListController for exit functionality.
- Modified List.fxml to connect the exit button to the quit method.
- Removed unused Interface class.

--- a/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/businfo/List.fxml
@@ -12,7 +12,7 @@
    <bottom>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-          <Button mnemonicParsing="false" text="Button" />
+          <Button mnemonicParsing="false" onAction="#quit" text="Exit" />
         </items>
       </ToolBar>
    </bottom>
