--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/LogMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/LogMenu.fxml
@@ -50,41 +50,49 @@
       </ImageView>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <children>
-            <TextField promptText="Calories">
+            <TextField fx:id="caloriesEaten" promptText="Calories">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </TextField>
-            <TextField layoutX="30.0" layoutY="50.0" promptText="Protein">
+            <TextField fx:id="proteinEaten" layoutX="30.0" layoutY="50.0" promptText="Protein">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </TextField>
-            <TextField layoutX="30.0" layoutY="76.0" promptText="Carbs">
+            <TextField fx:id="carbsEaten" layoutX="30.0" layoutY="76.0" promptText="Carbs">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </TextField>
-            <TextField layoutX="30.0" layoutY="102.0" promptText="Fats">
+            <TextField fx:id="fatsEaten" layoutX="30.0" layoutY="102.0" promptText="Fats">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </TextField>
-            <TextField layoutX="30.0" layoutY="128.0" promptText="Cholesterol">
+            <TextField fx:id="cholesterolEaten" layoutX="30.0" layoutY="128.0" promptText="Cholesterol">
                <padding>
                   <Insets right="20.0" />
                </padding>
             </TextField>
-            <Button mnemonicParsing="false" text="Submit" />
+            <Button mnemonicParsing="false" onAction="#submitFoodLog" text="Submit Food" />
+            <TextField fx:id="coloriesBurnt" promptText="Calories Burnt" />
+            <Button layoutX="150.0" layoutY="205.0" mnemonicParsing="false" onAction="#submitExcersizeLog" text="Submit Excersize" />
+            <TextField fx:id="timeWentSleep" layoutX="30.0" layoutY="240.0" promptText="Time went to sleep" />
+            <TextField fx:id="timeWokeUp" layoutX="30.0" layoutY="306.0" promptText="Time Woke up" />
+            <Button layoutX="150.0" layoutY="271.0" mnemonicParsing="false" onAction="#submitSleepLog" text="Submit Sleep" />
          </children>
          <padding>
             <Insets left="20.0" right="20.0" top="40.0" />
          </padding>
       </VBox>
    </center>
+   <children>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" />
+   </children>
 </View>
