--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-Signedin.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-Signedin.fxml
@@ -89,6 +89,11 @@
                         <Insets right="20.0" />
                      </padding>
                   </ButtonBar>
+                  <Button mnemonicParsing="false" onAction="#openLogRecords" text="Log" translateX="-138.0" translateY="20.0">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
                <opaqueInsets>
                   <Insets />
