--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/Example.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/Example.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" stylesheets="@/com/fss/everythingapp/css/menu.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" stylesheets="@/com/fss/everythingapp/css/menu.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
          <content>
@@ -16,6 +16,7 @@
                   <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
                   <Button mnemonicParsing="false" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
                   <Button mnemonicParsing="false" styleClass="material-button" text="Buses" textAlignment="CENTER" />
+                  <Button layoutX="224.0" layoutY="29.0" mnemonicParsing="false" onAction="#openFitnessApp" styleClass="material-button" text="Fitness" textAlignment="CENTER" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
