Allow user to create a date
Create many controller classes for FXML files.

Create many objects for further development of the project.

--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
@@ -19,7 +19,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="eventNameField" alignment="CENTER" prefHeight="25.0" prefWidth="35.0" promptText="Enter Event Title">
+      <TextField fx:id="eventNameField" alignment="CENTER" prefHeight="25.0" prefWidth="35.0" promptText="Enter Event Name">
          <VBox.margin>
             <Insets bottom="20.0" left="175.0" right="175.0" />
          </VBox.margin>
