--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MonthViewController">
+<BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MonthViewController">
    <left>
       <VBox prefHeight="375.0" prefWidth="187.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,7 +49,7 @@
    <bottom>
       <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="createDate" alignment="CENTER" mnemonicParsing="false" prefHeight="0.0" prefWidth="52.0" text="Create">
+            <Button fx:id="createDateButton" alignment="CENTER" mnemonicParsing="false" onAction="#createDate" prefHeight="0.0" prefWidth="52.0" text="Create">
                <HBox.margin>
                   <Insets right="30.0" />
                </HBox.margin>
