--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/Example.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/Example.fxml
@@ -16,6 +16,7 @@
                   <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
                   <Button mnemonicParsing="false" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
                   <Button mnemonicParsing="false" onAction="#openBuses" styleClass="material-button" text="Buses" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#openSimulations" styleClass="material-button" text="Simulations" textAlignment="CENTER" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
