--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-SigningIn.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-SigningIn.fxml
@@ -1,42 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-    Copyright (c) 2017, Gluon and/or its affiliates.
-    All rights reserved. Use is subject to license terms.
-
-    This file is available and licensed under the following license:
-
-    Redistribution and use in source and binary forms, with or without
-    modification, are permitted provided that the following conditions
-    are met:
-
-   - Redistributions of source code must retain the above copyright
-     notice, this list of conditions and the following disclaimer.
-   - Redistributions in binary form must reproduce the above copyright
-     notice, this list of conditions and the following disclaimer in
-     the documentation and/or other materials provided with the distribution.
-   - Neither the name of Oracle Corporation and Gluon nor the names of its
-     contributors may be used to endorse or promote products derived
-     from this software without specific prior written permission.
-
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
-<?import com.gluonhq.charm.glisten.control.TextField?>
-<?import com.gluonhq.charm.glisten.mvc.View?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -45,56 +12,47 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<View maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-4.0" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@../logo.png" />
-         </image>
-      </ImageView>
-   </top>
-   <center>
-      <VBox alignment="CENTER" prefHeight="454.0" prefWidth="335.0" BorderPane.alignment="CENTER">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <children>
-            <TextField fx:id="nameField" floatText="Name:">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </TextField>
-            <TextField fx:id="ageField" floatText="Age:" layoutX="30.0" layoutY="208.0">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </TextField>
-            <TextField fx:id="heightField" floatText="Height (cm):" layoutX="30.0" layoutY="226.0" />
-            <TextField fx:id="weightField" floatText="Weight (Kg) :" layoutX="10.0" layoutY="231.0" />
-            <TextField fx:id="bodyFatField" floatText="Body Fat (%):" layoutX="30.0" layoutY="208.0" />
-            <HBox alignment="CENTER" prefHeight="87.0" prefWidth="299.0">
-               <children>
-                  <RadioButton fx:id="maleRadio" mnemonicParsing="false" text="Male">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="genderToggle" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="femaleRadio" mnemonicParsing="false" text="Female" toggleGroup="$genderToggle">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </RadioButton>
-               </children>
-            </HBox>
-            <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitInfo" prefHeight="57.0" prefWidth="154.0" text="Submit">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
-         </children>
-         <padding>
-            <Insets left="20.0" right="20.0" />
-         </padding>
-      </VBox>
-   </center>
-</View>
+<BorderPane prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.fitness.Controllers.MMSigninginController">
+
+    <top>
+        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-4.0" BorderPane.alignment="CENTER">
+            <image>
+                <Image url="@../logo.png" />
+            </image>
+        </ImageView>
+    </top>
+
+    <center>
+        <VBox alignment="CENTER" prefHeight="454.0" prefWidth="335.0" BorderPane.alignment="CENTER">
+            <children>
+                <TextField fx:id="nameField" promptText="Name:" />
+                <TextField fx:id="ageField" promptText="Age:" />
+                <TextField fx:id="heightField" promptText="Height (cm):" />
+                <TextField fx:id="weightField" promptText="Weight (Kg):" />
+                <TextField fx:id="bodyFatField" promptText="Body Fat (%):" />
+
+                <HBox alignment="CENTER" prefHeight="87.0" prefWidth="299.0">
+                    <children>
+                        <RadioButton fx:id="maleRadio" mnemonicParsing="false" text="Male">
+                            <toggleGroup>
+                                <ToggleGroup fx:id="genderToggle" />
+                            </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="femaleRadio" mnemonicParsing="false" text="Female" toggleGroup="$genderToggle"/>
+                    </children>
+                </HBox>
+
+                <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitInfo" prefHeight="57.0" prefWidth="154.0" text="Submit">
+                    <font>
+                        <Font name="System Bold" size="12.0" />
+                    </font>
+                </Button>
+            </children>
+
+            <padding>
+                <Insets left="20.0" right="20.0" />
+            </padding>
+        </VBox>
+    </center>
+
+</BorderPane>
