--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-Signedin.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu-Signedin.fxml
@@ -2,16 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="600.0" prefWidth="335.0">
+<BorderPane prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.fitness.Controllers.MMSignedInController">
 
    <top>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-4.0" BorderPane.alignment="CENTER">
@@ -22,59 +19,38 @@
    </top>
 
    <center>
-      <VBox alignment="BOTTOM_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="BOTTOM_CENTER" spacing="20.0" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="40.0" />
          </padding>
          <children>
-            <VBox alignment="TOP_RIGHT">
-               <padding>
-                  <Insets top="-20.0" />
-               </padding>
+            <Button mnemonicParsing="false" onAction="#openPreferenceMenu" prefHeight="36.0" prefWidth="105.0" text="Preferences" />
+            <Button mnemonicParsing="false" onAction="#openDietMenu" prefHeight="47.0" prefWidth="219.0" text="Diet">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Button>
+            <Button layoutX="68.0" layoutY="271.0" mnemonicParsing="false" onAction="#openWorkoutMenu" prefHeight="47.0" prefWidth="219.0" text="Workout">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Button>
+            <Button layoutX="68.0" layoutY="204.0" mnemonicParsing="false" onAction="#openSleepMenu" prefHeight="47.0" prefWidth="219.0" text="Sleep">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Button>
+            <VBox alignment="CENTER" spacing="20.0">
                <children>
-                  <ButtonBar prefHeight="40.0" prefWidth="200.0">
-                     <buttons>
-                        <Button mnemonicParsing="false" prefHeight="30.0" text="Diet" />
-                        <ProgressBar prefHeight="20.0" prefWidth="200.0" progress="0.0" />
-                     </buttons>
-                     <padding>
-                        <Insets right="20.0" />
-                     </padding>
-                  </ButtonBar>
-
-                  <ButtonBar prefHeight="40.0" prefWidth="200.0">
-                     <buttons>
-                        <Button mnemonicParsing="false" prefHeight="30.0" text="Excersize" />
-                        <ProgressBar prefHeight="20.0" prefWidth="200.0" progress="0.0" />
-                     </buttons>
-                     <padding>
-                        <Insets right="20.0" />
-                     </padding>
-                  </ButtonBar>
-
-                  <ButtonBar prefHeight="40.0" prefWidth="200.0">
-                     <buttons>
-                        <Button mnemonicParsing="false" prefHeight="30.0" text="Sleep" />
-                        <ProgressBar prefHeight="20.0" prefWidth="200.0" progress="0.0" />
-                     </buttons>
-                     <padding>
-                        <Insets right="20.0" />
-                     </padding>
-                  </ButtonBar>
-
-                  <Button mnemonicParsing="false" onAction="#openLogRecords" text="Log" translateX="-138.0" translateY="20.0">
-                     <VBox.margin>
-                        <Insets top="40.0" />
-                     </VBox.margin>
+                  <Button mnemonicParsing="false" onAction="#openLogRecords" prefHeight="25.0" prefWidth="84.0" text="Log" />
+      
+                  <Button mnemonicParsing="false" onAction="#openLogMenu" prefHeight="62.0" prefWidth="172.0" text="+">
+                     <font>
+                        <Font size="30.0" />
+                     </font>
                   </Button>
                </children>
             </VBox>
-
-            <Button mnemonicParsing="false" onAction="#openLogMenu" prefHeight="62.0" prefWidth="172.0" text="+">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Button>
          </children>
       </VBox>
    </center>
