--- a/app/src/main/java/com/fss/everythingapp/simulations/doubleslit/DoubleSlitSimulation.fxml
+++ b/app/src/main/java/com/fss/everythingapp/simulations/doubleslit/DoubleSlitSimulation.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -34,6 +35,9 @@
          
          <Label fx:id="widthLabel" text="Slit Width: 0.1 mm" />
          <Slider fx:id="widthSlider" />
+         
+         <Button fx:id="resetButton" onAction="#reset" text="Reset" 
+                    style="-fx-background-color: #4CAF50; -fx-text-fill: white;" />
       </VBox>
    </bottom>
 </BorderPane>
