--- a/app/bin/main/com/fss/everythingapp/simulations/doubleslit/DoubleSlitSimulation.fxml
+++ b/app/bin/main/com/fss/everythingapp/simulations/doubleslit/DoubleSlitSimulation.fxml
@@ -27,14 +27,17 @@
       <VBox spacing="15.0">
          <padding><Insets bottom="15.0" left="15.0" right="15.0" top="15.0" /></padding>
          
-         <Label fx:id="wavelengthLabel" text="Wavelength: 450 nm" />
+         <Label fx:id="wavelengthLabel" text="Wavelength: 400 nm" />
          <Slider fx:id="wavelengthSlider" />
          
-         <Label fx:id="separationLabel" text="Slit Separation: 1.0 mm" />
+         <Label fx:id="separationLabel" text="Slit Separation: 0 μm" />
          <Slider fx:id="separationSlider" />
          
-         <Label fx:id="widthLabel" text="Slit Width: 0.1 mm" />
+         <Label fx:id="widthLabel" text="Slit Width: 0 μm" />
          <Slider fx:id="widthSlider" />
+         
+         <Label fx:id="screenDistanceLabel" text="Screen Distance: 0.00 m" />
+         <Slider fx:id="screenDistanceSlider" />
          
          <Button fx:id="resetButton" onAction="#reset" text="Reset" 
                     style="-fx-background-color: #4CAF50; -fx-text-fill: white;" />
