--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateDate.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateDate.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreateDateController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateDateController">
    <children>
       <Label text="Select a Date Type">
          <font>
@@ -16,12 +16,12 @@
             <Insets bottom="20.0" />
          </VBox.margin>
       </Label>
-      <Button fx:id="createEventButton" mnemonicParsing="false" onAction="#createEvent" text="Create New Event">
+      <Button mnemonicParsing="false" onAction="#createEvent" text="Create New Event">
          <VBox.margin>
             <Insets bottom="5.0" />
          </VBox.margin>
       </Button>
-      <Button fx:id="createTaskButton" mnemonicParsing="false" onAction="#createTask" text="Create New Task">
+      <Button mnemonicParsing="false" onAction="#createTask" text="Create New Task">
          <VBox.margin>
             <Insets top="5.0" />
          </VBox.margin>
