--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CreateTaskController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateTaskController">
    <children>
       <Label alignment="CENTER" text="Create New Task">
          <VBox.margin>
-            <Insets bottom="20.0" />
+            <Insets bottom="100.0" />
          </VBox.margin>
          <font>
             <Font size="24.0" />
@@ -21,7 +21,7 @@
       </Label>
       <TextField fx:id="taskNameField" alignment="CENTER" prefHeight="25.0" prefWidth="35.0" promptText="Enter Task Name">
          <VBox.margin>
-            <Insets bottom="20.0" left="175.0" right="175.0" />
+            <Insets bottom="20.0" left="50.0" right="50.0" />
          </VBox.margin>
       </TextField>
       <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="175.0" promptText="Due Date">
@@ -34,13 +34,13 @@
             <Label alignment="CENTER" text="Due Time" />
             <HBox alignment="CENTER" prefHeight="0.0" prefWidth="600.0">
                <children>
-                  <TextField fx:id="dueHourField" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="25.0" promptText="0">
+                  <TextField fx:id="dueHourField" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="30.0" promptText="0">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </TextField>
                   <Label text=":" />
-                  <TextField fx:id="dueMinField" prefHeight="25.0" prefWidth="35.0" promptText="00" />
+                  <TextField fx:id="dueMinField" prefHeight="25.0" prefWidth="30.0" promptText="00" />
                </children>
             </HBox>
          </children>
@@ -48,6 +48,6 @@
             <Insets bottom="20.0" />
          </VBox.margin>
       </VBox>
-      <Button fx:id="createTaskButton" mnemonicParsing="false" onAction="#createTask" text="Create Task" />
+      <Button mnemonicParsing="false" onAction="#createTask" text="Create Task" />
    </children>
 </VBox>
