--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -4,86 +4,67 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MonthViewController">
-   <left>
-      <VBox prefHeight="375.0" prefWidth="187.0" BorderPane.alignment="CENTER">
+
+<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.MonthViewController">
+   <children>
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
          <children>
-            <ScrollPane prefHeight="200.0" prefWidth="274.0" />
-         </children>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </VBox>
-   </left>
-   <center>
-      <GridPane gridLinesVisible="true" prefHeight="112.0" prefWidth="413.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="66.0" minHeight="0.0" prefHeight="22.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </GridPane>
-   </center>
-   <bottom>
-      <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="createDateButton" alignment="CENTER" mnemonicParsing="false" onAction="#createDate" prefHeight="0.0" prefWidth="52.0" text="Create">
-               <HBox.margin>
-                  <Insets right="30.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" text="Month">
+            <Button mnemonicParsing="false" text="Day">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
             </Button>
             <Button mnemonicParsing="false" text="Week">
                <HBox.margin>
-                  <Insets right="5.0" />
+                  <Insets left="5.0" right="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Day">
+            <Button mnemonicParsing="false" text="Month">
                <HBox.margin>
-                  <Insets right="5.0" />
+                  <Insets left="5.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-   </bottom>
-   <top>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="32.0" prefWidth="600.0" BorderPane.alignment="BOTTOM_LEFT">
+      <Label prefHeight="0.0" prefWidth="327.0" text="   SUN       MON       TUE        WED       THU         FRI         SAT" />
+      <GridPane gridLinesVisible="true" prefHeight="285.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="66.0" minHeight="0.0" prefHeight="22.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <ScrollPane prefHeight="250.0" prefWidth="335.0" />
+      <HBox alignment="CENTER" prefHeight="2.0" prefWidth="335.0">
          <children>
-            <Label alignment="TOP_LEFT" contentDisplay="BOTTOM" prefHeight="15.0" prefWidth="393.0" text="SUN           MON            TUE            WED           THU            FRI              SAT" textAlignment="CENTER">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="12.0" />
-               </font>
+            <Button mnemonicParsing="false" onAction="#exit" text="Exit">
                <HBox.margin>
-                  <Insets left="205.0" />
+                  <Insets right="10.0" />
                </HBox.margin>
-            </Label>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#createDate" text="Create">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
-   </top>
-</BorderPane>
+   </children>
+</VBox>
