--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
@@ -21,10 +21,10 @@
       </Label>
       <TextField fx:id="taskNameField" alignment="CENTER" prefHeight="25.0" prefWidth="35.0" promptText="Enter Task Name">
          <VBox.margin>
-            <Insets bottom="20.0" left="50.0" right="50.0" />
+            <Insets bottom="20.0" left="35.0" right="35.0" />
          </VBox.margin>
       </TextField>
-      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="175.0" promptText="Due Date">
+      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="Due Date">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
@@ -48,6 +48,22 @@
             <Insets bottom="20.0" />
          </VBox.margin>
       </VBox>
-      <Button mnemonicParsing="false" onAction="#createTask" text="Create Task" />
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#cancel" text="Cancel">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#createTask" text="Create Task">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </HBox>
    </children>
 </VBox>
